[package]
name = "Teleop"
version = "0.1.0"
edition = "2021"

[features]
default = []
gui = ["dep:gtk4", "dep:gdk4"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
zenoh = "1.3.4"
tokio = { version = "1.45.0", features = ["full"] }
kuksa-rust-sdk = "0.1.2"
rand = "0.8.5"
flume = "0.11.1"

gtk4 = { version = "0.6", optional = true }
gdk4 = { version = "0.6", optional = true }

# Binaries
[[bin]]
name = "provider"
path = "src/bin/provider.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "publisher"
path = "src/bin/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/bin/subscriber.rs"

[[bin]]
name = "OperationCenter"
path = "src/bin/OperationCenter.rs"
required-features = ["gui"]