[package]
name = "Teleop"
version = "0.1.0"
edition = "2021"

[features]
default = []
gui = ["dep:gtk4", "dep:gdk4"]

[dependencies]
gdk4 = { version = "0.10.0", optional = true }
# GTK4 Rust bindings
gtk4 = { version = "0.10.0", optional = true }

# GStreamer Rust bindings: rename the crate to `gst` so your code can use `use gst::prelude::*;`
#gst = { package = "gstreamer", version = "0.24" }
gstreamer = "0.24.1"
#gst-video = { package = "gstreamer-video", version = "0.24" }
gstreamer-video = "0.24.1"

# The gtk4 sink plugin (provides gtk4paintablesink which exposes a GdkPaintable)
# Use the published gst-plugin-gtk4 crate (0.13.x is recent/stable in 2025).
gst-plugin-gtk4 = "0.14.0"

# optional conveniences (uncomment if you use them in code)
glib = "0.21"        # if you need lower-level GLib APIs

# Binaries
[[bin]]
name = "OperationCenter"
path = "src/bin/OperationCenter.rs"
required-features = ["gui"]